@@ -1,7 +1,7 @@
 dnl -*- sh -*-
 dnl the "configure" script is made from this by running GNU "autoconf"
 dnl
-dnl "$Id: configure.in,v 1.33.2.31.2.121 2004/11/20 03:19:57 easysw Exp $"
+dnl "$Id: configure.in,v 1.33.2.31.2.122 2004/11/20 03:44:17 easysw Exp $"
 dnl
 dnl Configuration script for the Fast Light Tool Kit (FLTK).
 dnl
@@ -377,35 +377,49 @@ IMAGELIBS=""
 AC_SUBST(IMAGELIBS)
 
 AC_ARG_ENABLE(localjpeg, [  --enable-localjpeg      use local JPEG library, default=auto],
-    [if eval "test x$enable_localjpeg = xyes"; then
+    [if test x$enable_localjpeg = xyes; then
 	ac_cv_lib_jpeg_jpeg_CreateCompress=no
     fi])
 
 AC_CHECK_LIB(jpeg,jpeg_CreateCompress,
+    AC_DEFINE(HAVE_LIBJPEG)
     JPEGINC=""
     JPEG=""
     IMAGELIBS="-ljpeg $IMAGELIBS",
-    JPEGINC="-I../jpeg"
-    JPEG="jpeg"
-    IMAGELIBS="-lfltk_jpeg $IMAGELIBS")
+    if test x$enable_localjpeg = xno; then
+	JPEGINC=""
+	JPEG=""
+    else
+	AC_DEFINE(HAVE_LIBJPEG)
+	JPEGINC="-I../jpeg"
+	JPEG="jpeg"
+	IMAGELIBS="-lfltk_jpeg $IMAGELIBS"
+    fi)
 
 AC_ARG_ENABLE(localzlib, [  --enable-localzlib      use local ZLIB library, default=auto],
-    [if eval "test x$enable_localzlib = xyes"; then
+    [if test x$enable_localzlib = xyes; then
 	ac_cv_lib_z_gzgets=no
     fi])
 
 AC_CHECK_LIB(z,gzgets,
+    AC_DEFINE(HAVE_LIBZ)
     ZLIBINC=""
     ZLIB=""
     LIBS="-lz $LIBS"
     IMAGELIBS="-lz $IMAGELIBS",
-    ZLIBINC="-I../zlib"
-    ZLIB="zlib"
-    LIBS="-lfltk_z $LIBS"
-    IMAGELIBS="-lfltk_z $IMAGELIBS")
+    if test x$enable_localzlib = xno; then
+	ZLIBINC=""
+	ZLIB=""
+    else
+        AC_DEFINE(HAVE_LIBZ)
+	ZLIBINC="-I../zlib"
+	ZLIB="zlib"
+	LIBS="-lfltk_z $LIBS"
+	IMAGELIBS="-lfltk_z $IMAGELIBS"
+    fi)
 
 AC_ARG_ENABLE(localpng, [  --enable-localpng       use local PNG library, default=auto],
-    [if eval "test x$enable_localpng = xyes"; then
+    [if test x$enable_localpng = xyes; then
 	ac_cv_lib_png_png_set_tRNS_to_alpha=no
     fi])
 
@@ -413,11 +427,18 @@ AC_CHECK_LIB(png,png_set_tRNS_to_alpha, [
     PNGINC=""
     PNG=""
     IMAGELIBS="-lpng $IMAGELIBS"
+    AC_DEFINE(HAVE_LIBPNG)
     AC_CHECK_HEADER(png.h, AC_DEFINE(HAVE_PNG_H))],[
-    AC_DEFINE(HAVE_PNG_H)
-    PNGINC="-I../png"
-    PNG="png"
-    IMAGELIBS="-lfltk_png $IMAGELIBS"])
+    if test x$enable_localpng = xno; then
+        PNGINC=""
+        PNG=""
+    else
+	AC_DEFINE(HAVE_LIBPNG)
+        AC_DEFINE(HAVE_PNG_H)
+        PNGINC="-I../png"
+        PNG="png"
+        IMAGELIBS="-lfltk_png $IMAGELIBS"
+    fi])
 
 AC_SUBST(JPEG)
 AC_SUBST(JPEGINC)
@@ -425,10 +446,6 @@ AC_SUBST(PNG)
 AC_SUBST(PNGINC)
 AC_SUBST(ZLIB)
 AC_SUBST(ZLIBINC)
-
-AC_DEFINE(HAVE_LIBJPEG)
-AC_DEFINE(HAVE_LIBPNG)
-AC_DEFINE(HAVE_LIBZ)
 
 dnl Restore original LIBS settings...
 LIBS="$SAVELIBS"
@@ -911,5 +928,5 @@ dnl Make sure the fltk-config script is executable...
 chmod +x fltk-config
 
 dnl
-dnl End of "$Id: configure.in,v 1.33.2.31.2.121 2004/11/20 03:19:57 easysw Exp $".
+dnl End of "$Id: configure.in,v 1.33.2.31.2.122 2004/11/20 03:44:17 easysw Exp $".
 dnl
