@@ -1,5 +1,5 @@
 //
-// "$Id: threads.h,v 1.1.2.7 2004/04/11 04:39:01 easysw Exp $"
+// "$Id: threads.h,v 1.1.2.8 2004/11/20 03:44:18 easysw Exp $"
 //
 // Simple threading API for the Fast Light Tool Kit (FLTK).
 //
@@ -53,7 +53,7 @@ static int fl_create_thread(Fl_Thread& t, void *(*f) (void *), void* p)
   return pthread_create((pthread_t*)&t, 0, f, p);
 }
 
-#  elif defined(WIN32) // Use Windows threading...
+#  elif defined(WIN32) && !defined(__WATCOMC__) // Use Windows threading...
 
 #    include <windows.h>
 #    include <process.h>
@@ -64,9 +64,17 @@ static int fl_create_thread(Fl_Thread& t, void *(*f) (void *), void* p) {
   return t = (Fl_Thread)_beginthread((void( __cdecl * )( void * ))f, 0, p);
 }
 
+#  elif defined(__WATCOMC__)
+#    include <process.h>
+
+typedef unsigned long Fl_Thread;
+
+static int fl_create_thread(Fl_Thread& t, void *(*f) (void *), void* p) {
+  return t = (Fl_Thread)_beginthread((void(* )( void * ))f, 32000, p);
+}
 #  endif // !HAVE_PTHREAD_H
 #endif // !Threads_h
 
 //
-// End of "$Id: threads.h,v 1.1.2.7 2004/04/11 04:39:01 easysw Exp $".
+// End of "$Id: threads.h,v 1.1.2.8 2004/11/20 03:44:18 easysw Exp $".
 //
